--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,11 +1,27 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 350px;
+  width: 300px;
   justify-content: center;
-  height: 100vh;
-  min-height: 100vh;
-  padding: 0 0.5rem;
+  align-items: center;
+  background-color: #ddd;
+  border-top: 5px solid #fff;
+  border-right: 5px solid #eee;
+  border-left: 5px solid #ccc;
+  border-bottom: 5px solid #bbb;
+}
+
+.containerBorder {
+  height: 280px;
+  width: 280px;
+  justify-content: center;
+  align-items: center;
+  background-color: #ddd;
+  border-bottom: 5px solid #fff;
+  border-left: 5px solid #eee;
+  border-right: 5px solid #ccc;
+  border-top: 5px solid #bbb;
 }
 
 .board {
