--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -13,6 +13,7 @@
 }
 
 .containerBorder {
+  display: flex;
   height: 280px;
   width: 280px;
   justify-content: center;
@@ -39,18 +40,27 @@
 }
 
 .cell {
+  display: flex;
   width: 30px;
   height: 30px;
+  justify-content: center;
+  align-items: center;
   border: solid 1px rgb(85 85 85);
   background: url('~/assets/images/icons.png') no-repeat;
   background-position: -60px;
 }
 
 .stone {
-  background-color: rgb(119 119 119);
-  width: 30px;
-  height: 30px;
-  border: outset 4px rgb(188 186 186);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: #ddd;
+  border-top: 5px solid #fff;
+  border-right: 5px solid #eee;
+  border-left: 5px solid #ccc;
+  border-bottom: 5px solid #bbb;
 }
 
 .main {
